// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EmptyFile.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`EmptyFileWithComments.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// SPDX-License-Identifier: MIT

/**
 * TODO: Write contract.
 */
=====================================output=====================================
// SPDX-License-Identifier: MIT

/**
 * TODO: Write contract.
 */

================================================================================
`;
